Odin logo added to the main page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Odin Recepies</title>
 </head>
 <body>
+    <img src="./images/odin-logo-310x310.png" height="150" width="150">
     <h1>Odin Recepies</h1>
     <ul>
         <li><a href="./recepies/lasagna.html">Lasagna</a></li>
